syntax = "proto3";

package pb;

message HealthCheckReq {}

message HealthCheckRes {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}